JSAPI-3738: Left text align for round controls (temporary fix)

--- a/styles/style.less
+++ b/styles/style.less
@@ -990,3 +990,7 @@
             .noRepeatableBg('broom-white');
             }
         }
+
+.dg-control-round {
+    text-align: left;
+    }
